--- a/bemutatkozas.html
+++ b/bemutatkozas.html
@@ -45,10 +45,10 @@
           </li> -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Csipő
+              Csípő
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="csipofajdalomrol.html">Csipőfájdalomról</a>
+              <a class="dropdown-item" href="csipofajdalomrol.html">Csípőfájdalomról</a>
               <a class="dropdown-item" href="izomatvagas-nelkul.html">Izomátvágás nélküli, minimál invazív csípőprotézis beültetés</a>
               <a class="dropdown-item" href="csipomutetek.html">Csípőműtétek</a>
             </div>
@@ -113,7 +113,7 @@
       <p>Eddigi pályám során mindig vonzottak az új technológiák, innovációk bevezetése, mellyel <strong>célom, hogy a betegek gyógyulását megkönnyítsük és hosszú távon eredményesebb legyen egy-egy beavatkozás.</strong> Ennek megfelelően a szekszárdi kórházban elsőként végeztünk arthroscopos elülső anatómiai keresztszalag pótlást, vállficamot követő arthroscopos Bankart műtétet, arthroscopos rotátor köpeny rekonstrukciót. </p>
       <p>2019. novemberétől pedig, a megyei kórházak közül elsőként osztályunkon végzünk térdprotézis beütetéseket, hosszú alsó végtagi RTG alapján. Olyan számítógépes tervezőprogram segítségével végezzük, mellyel pontosabb beültetést, jobb eredményt és hosszabb protézis élettartamot tudunk elérni. </p>
       <p><strong>A korábbi 80 %-os műtéti eredményességet így 95%-ra tudjuk tervezni.</strong> Amennyiben a beteg anatómiai adottságai lehetővé teszik a protézis beültetést <strong>minimál invazív technikával</strong> végezzük mind csípő /minimál invazív elülső/, mind térd /mini midvastus, subvastus feltárás/ esetében. Így <strong>a kórházban töltött idő jelentősen lerövidül</strong>, betegeink gyorsabb rehabilitációs időre számíthatnak, jóval korábban térhetnek vissza életükhöz/munkájukhoz. </p>
-      <p><strong>Magán műtéteimet a budapesti <a class="atmenet" href="www.emineo.hu">Emineo magánklinikán</a> végzem</strong>, ahol a fentieken túl lehetőség van térdprotézis beültetésnél az egyéni, MR alapján készült sablonnal történő protézis beültetésre, illetve csípőprotézis esetében a mozgásanalízisen alapuló beültetésre, melyek még jobb eredményt biztosítanak. </p>
+      <p><strong>Magán műtéteimet a budapesti <a class="atmenet" href="https://emineo.hu/" target="_blank">Emineo magánklinikán</a> végzem</strong>, ahol a fentieken túl lehetőség van térdprotézis beültetésnél az egyéni, MR alapján készült sablonnal történő protézis beültetésre, illetve csípőprotézis esetében a mozgásanalízisen alapuló beültetésre, melyek még jobb eredményt biztosítanak. </p>
       <h2>Tagságok/képzések:</h2>
       <p>A Magyar Ortopéd Társaság tagja vagyok. </p>
       <p>A hazai kongresszusok mellett rendszeresen veszek részt külföldi kongresszusokon és tanulmányutakon: AO Recon kurzusok, ausztriai Stolzalpei Klinikán térdkurzusok.</p>
