--- a/izomatvagas-nelkul.html
+++ b/izomatvagas-nelkul.html
@@ -38,10 +38,10 @@
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Csipő
+              Csípő
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="csipofajdalomrol.html">Csipőfájdalomról</a>
+              <a class="dropdown-item" href="csipofajdalomrol.html">Csípőfájdalomról</a>
               <a class="dropdown-item" href="izomatvagas-nelkul.html">Izomátvágás nélküli, minimál invazív csípőprotézis beültetés</a>
               <a class="dropdown-item" href="csipomutetek.html">Csípőműtétek</a>
             </div>
@@ -118,7 +118,7 @@
           </ul>
         <p>A módszert több éve alkalmazzák Európában kimagasló eredménnyel. Magyarország harmadikként kezdte meg évekkel ezelőtt a mini-invazív 
           technikával történő csípőprotézis beültetés oktatását Pest megyében. Ortopédiai osztályunkon 2014 óta alkalmazzuk ezt a feltárási technikát, 
-          mely minden szempontból precíz munkát és tervezést igényel. Az <a class="atmenet" href="www.emineo.hu"> Emineo magánklinikán</a>  elérhető a Corin OPS rendszer, 
+          mely minden szempontból precíz munkát és tervezést igényel. Az <a class="atmenet" href="https://emineo.hu/" target="_blank"> Emineo magánklinikán</a>  elérhető a Corin OPS rendszer, 
           (Optimized Positioning System) melynek lényege, hogy ct és röntgen analízis alapján a beteg mozgásához és anatómiai adottságához igazítjuk a 
           protézist. Ezzel az eljárással műtéteink sikeressége, betegeink panaszmentes gyógyulása 80 százalékról 95 százalékra emelhető.  </p>
         <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/Optimized-Positioning-System.jpg" alt="Mozgáshoz és anatómiához igazított protézis.">
