--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -44,10 +44,10 @@
           </li> -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Csipő
+              Csípő
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="csipofajdalomrol.html">Csipőfájdalomról</a>
+              <a class="dropdown-item" href="csipofajdalomrol.html">Csípőfájdalomról</a>
               <a class="dropdown-item" href="izomatvagas-nelkul.html">Izomátvágás nélküli, minimál invazív csípőprotézis beültetés</a>
               <a class="dropdown-item" href="csipomutetek.html">Csípőműtétek</a>
             </div>
@@ -121,11 +121,10 @@
                 minden pénteken 13.00–17.00 óráig <br>
           </p>
           <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/sub-rosa-egeszsegkozpont.png" alt="Sub Rosa Egészségközpont">  
+
         </div>
       </div>
-      <!-- <div class="container">
-        <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/sub-rosa-egeszsegkozpont.png" alt="Sub Rosa Egészségközpont">
-      </div> -->
+
       <!-- /. SZekszárd vége -->
 
 
