--- a/terd-protezis-beultetes.html
+++ b/terd-protezis-beultetes.html
@@ -44,10 +44,10 @@
           </li> -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Csipő
+              Csípő
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="csipofajdalomrol.html">Csipőfájdalomról</a>
+              <a class="dropdown-item" href="csipofajdalomrol.html">Csípőfájdalomról</a>
               <a class="dropdown-item" href="izomatvagas-nelkul.html">Izomátvágás nélküli, minimál invazív csípőprotézis beültetés</a>
               <a class="dropdown-item" href="csipomutetek.html">Csípőműtétek</a>
             </div>
@@ -115,7 +115,7 @@
           melyet lehetőség szerint minimál invazív feltárásokból végzünk. Térdprotézis beültetés  esetében különösen fontos a műtéti tervezés, melyet vagy 
           műtéti tervező program segítségével (MediCad), vagy alsó végtagi  MR vizsgálat alapján végzünk. MR-vel végzett tervezés esetében lehetőség van a 
           még nagyobb pontosságot biztosító egyedi térdsablon elkészítésére (Attune PSI), mely még jobb hosszú távú eredményt tud biztosítani. 
-          Ez a technika jelenleg az <a class="atmenet" href="www.emineo.hu"> Emineo magánklinikán</a> elérhető. 
+          Ez a technika jelenleg az <a class="atmenet" href="https://emineo.hu/" target="_blank"> Emineo magánklinikán</a> elérhető. 
         </p>
         <p><strong>A mini subvastus – izomátvágás nélküli feltárással</strong> elkerülhető az izomzat bemetszése. </p>      
         <p>Miért jobb ez a technika?</p>
