--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Csipő
+              Csípő
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="csipofajdalomrol.html">Csipőfájdalomról</a>
+              <a class="dropdown-item" href="csipofajdalomrol.html">Csípőfájdalomról</a>
               <a class="dropdown-item" href="izomatvagas-nelkul.html">Izomátvágás nélküli, minimál invazív csípőprotézis beültetés</a>
               <a class="dropdown-item" href="csipomutetek.html">Csípőműtétek</a>
             </div>
@@ -100,35 +100,35 @@
         <div class="carousel-item active" style="background-image: url('pictures/slide-1.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>CORIN OPS</h2>
-            <p class="slideshow-p">A legújabb Optimized Position System technológiát alkalmazzuk csípőműtéteinknél.</p> 
+            <p class="slideshow-p">A legújabb Optimized Position System technológiát alkalmazzuk csípőműtéteinknél</p> 
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('pictures/slide-2.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>SUB ROSA</h2>
-            <p class="slideshow-p">Szekszárdon a város újonnan nyílt egészségközpontjában várom pácienseimet.</p> 
+            <p class="slideshow-p">Szekszárdon a város újonnan nyílt egészségközpontjában várom pácienseimet</p> 
           </div>
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('pictures/slide-3.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>IZOMÁTVÁGÁS NÉLÜL</h2>
-            <p class="slideshow-p">Térd és csípő protézis beültetést minimál invazív technikával végzünk a gyorsabb gyógyulásért.</p> 
+            <p class="slideshow-p">Térd- és csípőprotézis beültetést minimál invazív technikával végzünk a gyorsabb gyógyulásért</p> 
           </div>
         </div>
         <!-- Slide Four - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('pictures/slide-4.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>TÉRDPROTÉZIS BEÜLTETÉS</h2>
-            <p class="slideshow-p">A mini subvastus - izomátvágás nélküli feltárással elkerülhető az izomzat bemetszése.</p> 
+            <p class="slideshow-p">A mini subvastus - izomátvágás nélküli feltárással elkerülhető az izomzat bemetszése</p> 
           </div>
         </div>
         <!-- Slide Five - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('pictures/slide-5.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>ARTHROSCOPOS VÁLLMŰTÉT</h2>
-            <p class="slideshow-p">Az operációkat általában egynapos beavatkozás keretében, altatásban vagy idegblokáddal végezzük.</p>
+            <p class="slideshow-p">Az operációkat általában egynapos beavatkozás keretében, altatásban vagy idegblokáddal végezzük</p>
           </div>
         </div>
 
