--- a/terd-protezis-csere.html
+++ b/terd-protezis-csere.html
@@ -44,10 +44,10 @@
           </li> -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Csipő
+              Csípő
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="csipofajdalomrol.html">Csipőfájdalomról</a>
+              <a class="dropdown-item" href="csipofajdalomrol.html">Csípőfájdalomról</a>
               <a class="dropdown-item" href="izomatvagas-nelkul.html">Izomátvágás nélküli, minimál invazív csípőprotézis beültetés</a>
               <a class="dropdown-item" href="csipomutetek.html">Csípőműtétek</a>
             </div>
