--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <!-- Slide Three - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('pictures/slide-3.jpg')">
           <div class="carousel-caption d-none d-md-block">
-            <h2>IZOMÁTVÁGÁS NÉLÜL</h2>
+            <h2>IZOMÁTVÁGÁS NÉLKÜL</h2>
             <p class="slideshow-p">Térd- és csípőprotézis beültetést minimál invazív technikával végzünk a gyorsabb gyógyulásért</p> 
           </div>
         </div>
