--- a/csipomutetek.html
+++ b/csipomutetek.html
@@ -129,7 +129,7 @@
           <p>A revíziós protézis műtétek különböznek a primer protézisektől. Egyik oka annak, hogy a revíziós műtéteket nem 
             lehet rutin beavatkozásként említeni az, hogy a beültetett első protézis körül szinte mindig csontvesztés 
             figyelhető meg. Ilyenkor egy átültetett csont darabbal, vagy speciális, a csont pótlására alkalmas anyaggal (Trabecular metal) erősítjük 
-            meg a csontot. Revisios műtéteknél általában speciális implantátumokat használunk. Ezt hívjuk saját átültetett szövetnek.<br>
+            meg a csontot. Revisios műtéteknél általában speciális implantátumokat használunk. <br>
             A műtéteink során rendszerint csont és csontvelő mintákat veszünk, melyeket bakteriológiai laboratóriumba küldünk 
             esetleges fertőzés kimutatása céljából.
           </p>
