--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>        
         <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>        
+        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>     
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
@@ -131,6 +132,13 @@
             <p class="slideshow-p">Az operációkat általában egynapos beavatkozás keretében, altatásban vagy idegblokáddal végezzük</p>
           </div>
         </div>
+        <!-- Slide six - Set the background image for this slide in the line below -->
+        <div class="carousel-item" style="background-image: url('pictures/attune-terdprotezis.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>TÉRDPROTÉZIS BEÜLTETÉS</h2>
+            <p class="slideshow-p">A forradalmian új, egyénre szabható ATTUNE térdprotézis rendszerrel</p> 
+          </div>
+        </div>        
 
 
       </div>        
@@ -171,7 +179,7 @@
         <p>Küldetésemnek érzem, hogy <strong>megkönnyítsem a hozzám forduló betegek gyógyulását és hosszú távon eredményesebb legyen egy-egy beavatkozás.</strong>
            Ezért is tartom fontosnak, az új technológiák, innovációk alkalmazását szakterületemen. Térd és csípő protézis beültetést a legújabb <strong>minimál invazív technikával </strong>
            végzünk. Így a <strong>kórházban töltött idő és a rehabilitáció jelentősen lerövidül</strong>, betegeink <strong>jóval korábban térhetnek vissza munkájukhoz.</strong> <br> <br>
-           A szekszárdi Kórház <strong>ortopédiai osztályának vezetőjeként </strong>lehetőségem volt elsőként végezni arthroscopos elülső anatómiai keresztszalag pótlást, 
+           A szekszárdi Kórház <strong>ortopédiai részlegének vezetőjeként </strong>lehetőségem volt elsőként végezni arthroscopos elülső anatómiai keresztszalag pótlást, 
            vállficamot követő arthroscopos Bankart műtétet, arthroscopos rotátor köpeny rekonstrukciót. Mindezt olyan új számítógépes tervezőprogram segítségével,  
            mellyel <strong>jobb eredményt és hosszabb protézis élettartamot lehet elérni. Ezzel a korábbi 80 %-os műtéti eredményességet 95%-ra tudjuk tervezni a betegeknél.</strong> </p>
        </div>
