--- a/izomatvagas-nelkul.html
+++ b/izomatvagas-nelkul.html
@@ -116,8 +116,7 @@
             <li>a protézis ficamának gyakorisága alacsonyabb az egyéb műtéti beavatkozásokhoz képest, mert az izmok azonnal működnek</li>
             <li>az operált végtag a műtét napján már teljes testsúllyal terhelhető</li>
           </ul>
-        <p>A módszert több éve alkalmazzák Európában kimagasló eredménnyel. Magyarország harmadikként kezdte meg évekkel ezelőtt a mini-invazív 
-          technikával történő csípőprotézis beültetés oktatását Pest megyében. Ortopédiai osztályunkon 2014 óta alkalmazzuk ezt a feltárási technikát, 
+        <p>A módszert több éve alkalmazzák Európában kimagasló eredménnyel. Ortopédiai osztályunkon 2014 óta alkalmazzuk a mini-invazív feltárási technikát, 
           mely minden szempontból precíz munkát és tervezést igényel. Az <a class="atmenet" href="https://emineo.hu/" target="_blank"> Emineo magánklinikán</a>  elérhető a Corin OPS rendszer, 
           (Optimized Positioning System) melynek lényege, hogy ct és röntgen analízis alapján a beteg mozgásához és anatómiai adottságához igazítjuk a 
           protézist. Ezzel az eljárással műtéteink sikeressége, betegeink panaszmentes gyógyulása 80 százalékról 95 százalékra emelhető.  </p>
