--- a/terd-protezis-csere.html
+++ b/terd-protezis-csere.html
@@ -95,7 +95,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3"> <stromg>Térdprotézis csere – revisios</stromg>
+    <h1 class="mt-4 mb-3"> <stromg>Térdprotézis csere a legmodernebb ATTUNE PSI rendszerrel</stromg>
     </h1>
   </div>    
 
@@ -122,14 +122,16 @@
            melyet laboratóriumi vizsgálatra küldünk, az esetleges fertőzés kimutatására. A revíziós műtétek nem rutin 
            beavatkozások. Ezek a beavatkozások megnövekedett műtéti időt, speciális műszerezettséget és sok esetben megnyúlt 
            rehabilitációt is eredményeznek. Megtervezzük a beültetendő protézis minél jobb helyzetét, a használandó revisios protézis típusát.
-           Az Emineo budapesti magánkórházzal együttműködve rendelkezésre áll az MRI alapján készült egyedi (Zimmer PSI) 
-           sablonnal beültethető térdprotézis is. Itt tervezzük meg a mozgásanalízisre épülő csípő és teljesen egyedi térdprotézis beültetést is.
+           A világ egyik jelenleg elérhető, <strong>legmodernebb</strong> térdprotézis megoldását alkalmazzuk az <strong>ATTUNE Knee System Trumatch 
+           Personalised</strong>-et. Ez a korszerű rendszer Magyarországon csak a budapesti <a class="atmenet" 
+           href="https://emineo.hu/a-vilag-egyik-legmodernebb-terdprotezis-megoldasa-mostantol-magyarorszagon-is-elerheto" target="_blank"><strong>Emineo Magánkórházban</strong></a> érhető el. 
+           Itt tervezzük meg a mozgásanalízisre épülő csípő és teljesen egyedi térdprotézis beültetéseket.
           </p>
                 <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/terdserulesek_fajtai_es_kezelesuk.jpg" alt="Térdprotézis csere – revisios">
     </div>
 
     <div class="col-lg-6 img-thumbnail">
-      <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/rontgen-terd.jpg" alt="Röntgenkép térdfájdalom">
+      <img class="img-fluid rounded mb-4 rounded-lg img-thumbnail" src="pictures/attune-psi-terdprotezis.jpg" alt="Röntgenkép térdfájdalom">
       <div class="open-contact">
         <div>
           <h2 class="open-hours">Magánrendelési idők: </h2>
