--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
         <p>Küldetésemnek érzem, hogy <strong>megkönnyítsem a hozzám forduló betegek gyógyulását és hosszú távon eredményesebb legyen egy-egy beavatkozás.</strong>
            Ezért is tartom fontosnak, az új technológiák, innovációk alkalmazását szakterületemen. Térd és csípő protézis beültetést a legújabb <strong>minimál invazív technikával </strong>
            végzünk. Így a <strong>kórházban töltött idő és a rehabilitáció jelentősen lerövidül</strong>, betegeink <strong>jóval korábban térhetnek vissza munkájukhoz.</strong> <br> <br>
-           A szekszárdi Kórház <strong>ortopédiai részlegének vezetőjeként </strong>lehetőségem volt elsőként végezni arthroscopos elülső anatómiai keresztszalag pótlást, 
-           vállficamot követő arthroscopos Bankart műtétet, arthroscopos rotátor köpeny rekonstrukciót. Mindezt olyan új számítógépes tervezőprogram segítségével,  
-           mellyel <strong>jobb eredményt és hosszabb protézis élettartamot lehet elérni. Ezzel a korábbi 80 %-os műtéti eredményességet 95%-ra tudjuk tervezni a betegeknél.</strong> </p>
+           A szekszárdi Kórház <strong>ortopédiai részlegének vezetőjeként </strong>lehetőségem volt elsőként végezni vállficamot 
+           követő arthroscopos Bankart műtétet, arthroscopos rotátor köpeny rekonstrukciót és arthroscopos elülső anatómiai keresztszalag pótlást. Utóbbit olyan új számítógépes tervezőprogram segítségével,   
+           mellyel <strong>jobb eredményt és hosszabb protézis élettartamot érhetünk el. Ezzel a korábbi 80 %-os műtéti eredményességet 95%-ra tudjuk tervezni a betegeknél.</strong> </p>
        </div>
       <div class="col-lg-12">
         <p><strong></strong> </p>
