--- a/terd-protezis-beultetes.html
+++ b/terd-protezis-beultetes.html
@@ -114,8 +114,8 @@
           Az egyik leggyakoribb ortopédiai beavatkozás napjainkban a teljes térd protézis beültetés (fél protézis beültetést csak kivételes esetben végzünk), 
           melyet lehetőség szerint minimál invazív feltárásokból végzünk. Térdprotézis beültetés  esetében különösen fontos a műtéti tervezés, melyet vagy 
           műtéti tervező program segítségével (MediCad), vagy alsó végtagi  MR vizsgálat alapján végzünk. MR-vel végzett tervezés esetében lehetőség van a 
-          még nagyobb pontosságot biztosító egyedi térdsablon elkészítésére (Attune PSI), mely még jobb hosszú távú eredményt tud biztosítani. 
-          Ez a technika jelenleg az <a class="atmenet" href="https://emineo.hu/" target="_blank"> Emineo magánklinikán</a> elérhető. 
+          még nagyobb pontosságot biztosító egyedi térdsablon elkészítésére az Attune PSI-vel.  
+          Ez a jelenleg elérhtő egyik <strong>legkorszerűbb</strong> térdprotézis rendszer és Magyarországon csak az <a class="atmenet" href="https://emineo.hu/" target="_blank"> Emineo magánklinikán</a> elérhető. 
         </p>
         <p><strong>A mini subvastus – izomátvágás nélküli feltárással</strong> elkerülhető az izomzat bemetszése. </p>      
         <p>Miért jobb ez a technika?</p>
