GooglAnalytics code include

--- a/bemutatkozas.html
+++ b/bemutatkozas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="hu">
 
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Dr. Ganczer Péter Ortopéd sebész</title> 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,8 +19,18 @@
   
     <!-- Custom styles for this template -->
     <link href="css/modern-business.css" rel="stylesheet">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154803535-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-154803535-2');
+  </script>
   
-  </head>
+</head>
 
 <body>
 
